fix spacing in navbar

--- a/src/app.css
+++ b/src/app.css
@@ -147,6 +147,7 @@ IMAGES =========================================
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-block : .5rem;
 }
 
 .logo-wrapper {
